# ludum31

./: .gitignore  .gitmodules  Cargo.toml  README.md
assets/: level.json  level.tmx  tileset.pyxel
rust-game-platforms/: Cargo.toml  README.md
rust-game-platforms/src/: fps_meter.rs  lib.rs
rust-game-platforms/src/sdl2_opengl/: mod.rs
src/: main.rs
src/game/: audio.rs  collision.rs  items.rs  level.rs  mod.rs  player.rs  rect.rs  render.rs  wrapping.rs
src/game/render/: mod.rs  tileset.rs
src/game/render/shaders/: fragment.glsl  vertex.glsl
src/util/: matrix.rs  mod.rs  png.rs
synth/: Cargo.toml  README.md  effect.rs  lib.rs  noise.rs  pulse.rs  triangle.rs
