[package]

name = "ludum31"
version = "0.0.1"
authors = ["Dan Spencer <dan@atomicpotato.net>"]

[features]

windows-distribute = ["statically-link-sdl2", "no-console"]
print-fps = ["game_platforms/print-fps"]
statically-link-sdl2 = []
no-console = []

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.game_platforms]
path = "rust-game-platforms"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.time]
git = "https://github.com/rust-lang/time"

[dependencies.synth]
path = "synth"

[dependencies.lodepng]
git = "https://github.com/pornel/lodepng-rust"
